# village

./: CMakeLists.txt  Info.plist  README0.md  add.md  appveyor.yml  doxygen.config  src.cbp
ci/: build-gitlab.sh  build-travis.sh  clang-format-all.sh  test.sh
docker/node/: Dockerfile  entry.sh
gtest/: gtest.cbp
load-tester/src/: launch_node.rs  main.rs
python_test/: rpc_fun.py  rpc_test.py
src/: blockstore.cpp  blockstore.hpp  common.cpp  common.hpp  config.hpp  epoch_common.cpp  epoch_common.h  epochstore.cpp  epochstore.h  icon.hpp  ledger.cpp  ledger.hpp  versioning.cpp  versioning.hpp
src/core_test/: block.cpp  block_store.cpp  conflicts.cpp  gap_cache.cpp  interface.cpp  ledger.cpp  message.cpp  message_parser.cpp  network.cpp  node.cpp  peer_container.cpp  processor_service.cpp  rpc.cpp  send_tx.cpp  uint256_union.cpp  versioning.cpp  wallet.cpp  wallets.cpp  work_pool.cpp
src/germ_node/: daemon.cpp  daemon.hpp  entry.cpp
src/germ_wallet/: entry.cpp
src/lib/: blocks.cpp  blocks.hpp  election.cpp  election.h  epoch.cpp  epoch.h  errors.cpp  errors.hpp  expected.hpp  general_account.cpp  general_account.h  interface.cpp  numbers.cpp  numbers.hpp  smart_contract.cpp  smart_contract.h  smart_contract_state.cpp  smart_contract_state.h  tx.cpp  tx.h  utility.hpp  vote.cpp  vote.h  witness.cpp  witness.h  witness_candidate.cpp  witness_candidate.h  work.cpp  work.hpp
src/node/: active_elections.cpp  active_elections.h  bootstrap.cpp  bootstrap.hpp  common.cpp  common.hpp  deposit.cpp  deposit.h  node.cpp  node.hpp  openclwork.cpp  openclwork.hpp  rpc.cpp  rpc.hpp  rpc_secure.cpp  rpc_secure.hpp  stats.cpp  stats.hpp  testing.cpp  testing.hpp  utility.cpp  utility.hpp  wallet.cpp  wallet.hpp  working.hpp  xorshift.hpp
src/node/bootstrap/: bootstrap.cpp  bootstrap.h  bootstrap_attempt.cpp  bootstrap_attempt.h  bootstrap_client.cpp  bootstrap_client.h  bootstrap_initiator.cpp  bootstrap_initiator.h  bootstrap_listener.cpp  bootstrap_listener.h  bootstrap_server.cpp  bootstrap_server.h  bulk_pull_blocks_server.cpp  bulk_pull_blocks_server.h  bulk_pull_client.cpp  bulk_pull_client.h  bulk_pull_server.cpp  bulk_pull_server.h  bulk_push_client.cpp  bulk_push_client.h  bulk_push_server.cpp  bulk_push_server.h  epoch_bulk_pull_client.cpp  epoch_bulk_pull_client.h  epoch_bulk_pull_server.cpp  epoch_bulk_pull_server.h  epoch_bulk_push_client.cpp  epoch_bulk_push_client.h  epoch_bulk_push_server.cpp  epoch_bulk_push_server.h  epoch_req_client.cpp  epoch_req_client.h  epoch_req_server.cpp  epoch_req_server.h  frontier_req_client.cpp  frontier_req_client.h  frontier_req_server.cpp  frontier_req_server.h  socket.cpp  socket.h
src/node/consensus/: active_witnesses.cpp  active_witnesses.h
src/node/network/: network.cpp  network.h
src/plat/default/: icon.cpp  priority.cpp
src/plat/linux/: priority.cpp
src/plat/osx/: working.mm
src/plat/posix/: openclapi.cpp  working.cpp
src/plat/windows/: icon.cpp  openclapi.cpp  priority.cpp  working.cpp
src/qt/: qt.cpp  qt.hpp
src/slow_test/: node.cpp
testnet/data/: config.json  data.ldb  data.ldb-lock  epoch.ldb
